--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="src/css/style.css" type="text/css">
+    <link rel="stylesheet" href="src/libs/css/bootstrap.min.css" type="text/css">
+    <script type="text/javascript" src="src/libs/js/jquery-3.5.1.js"></script>
+    <script type="text/javascript" src="src/libs/js/jquery-3.5.1.min.js"></script>
   </head>
   <body>
     <header>
@@ -13,8 +16,9 @@
 
     </main>
     <footer>
-      
+
     </footer>
+    <script type="text/javascript" src="src/libs/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="src/js/javascript.js"></script>
   </body>
 </html>
