--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Steven Wang - Web Developer</title>
-    <link rel="stylesheet" type="text/css" ref="src/libs/css/bootstrap.min.css">
-    <script type="text/javascript" src="src/libs/js/bootstrap.min.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" ref="src/libs/css/bootstrap.min.css"> -->
     <link rel="shortcut icon" href="src/assets/img/logo.jpg" type="image/jpg">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="src/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <script type="text/javascript" src="src/libs/js/jquery-3.5.1.min.js"></script>
+
   </head>
   <body>
     <!-- Navigation Bar -->
-    <header class="topnavbar" id="topnavbar">
-      <nav class="topnavbar__container navbar navbar-expand-lg navbar-light bg-light">
+    <header class="topnavbar navbar-fixed-top" id="topnavbar">
+      <nav class="topnavbar__container navbar navbar-expand-lg navbar-light navbar-fixed-top">
         <div class="site__logo">
           <div class="logo__wcrown">
             <div class="logo__wcrown--top">
@@ -542,9 +543,13 @@
     <footer class="footer">
       © 2021 All copy rights reserved. Developed by &nbsp;<span><a href="https://skykk0128.github.io/Project_1/">Steven Wang</a></span>
     </footer>
+    <!-- <script type="text/javascript" src="src/libs/js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="src/libs/js/bootstrap.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src='https://www.google.com/recaptcha/api.js'></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script type="text/javascript" src="src/libs/js/jquery-3.5.1.js"></script>
     <script type="text/javascript" src="src/js/javascript.js">
     </script>
   </body>
