--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!-- Education -->
             <div class="resume__education">
               <div class="section__header">
-                <h2>Education</h2>
+                <h3>Education</h3>
               </div>
               <div class="resume__education--container resume__topitems">
                 <div class="resume__bullet">
@@ -166,7 +166,7 @@
             <!-- Work Experience -->
             <div class="resume__work">
               <div class="section__header">
-                <h2>Experience</h2>
+                <h3>Experience</h3>
               </div>
               <div class="resume__work--container resume__topitems">
                 <div class="resume__bullet">
@@ -260,7 +260,7 @@
             <!-- Coding Skills -->
             <div class="resume__coding">
               <div class="section__header">
-                <h2>Coding <span>Skills</span></h2>
+                <h3>Coding <span>Skills</span></h3>
               </div>
               <div class="resume__skill">
                 <div class="resume__skill--container">
@@ -317,7 +317,7 @@
             <!-- Design Skills -->
             <div class="resume__design">
               <div class="section__header">
-                <h2>Design <span>Skills</span></h2>
+                <h3>Design <span>Skills</span></h3>
               </div>
               <div class="resume__skill">
                 <div class="resume__skill--container">
@@ -358,7 +358,7 @@
             <!-- Other Skills -->
             <div class="resume__other">
               <div class="section__header">
-                <h2>Other <span>Skills</span></h2>
+                <h3>Other <span>Skills</span></h3>
               </div>
               <div class="resume__skill">
                 <div class="resume__skill--container">
@@ -414,9 +414,13 @@
         </div>
         <div class="contact__container">
           <div class="contact__getInTouch">
-            <h2>Get In <span>Touch</span></h2>
+            <h3>Get In <span>Touch</span></h3>
             <div class="contact__map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.6765705030657!2d144.94289281529123!3d-37.821044042232984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d59422626e1%3A0xb54ce0869eb6d64c!2s838%20Collins%20St%2C%20Docklands%20VIC%203008!5e0!3m2!1sen!2sau!4v1609549771978!5m2!1sen!2sau" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.6765705030657!2d144.94289281529123!3d-37.821044042232984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d59422626e1%3A0xb54ce0869eb6d64c!2s838%20Collins%20St%2C%20Docklands%20VIC%203008!5e0!3m2!1sen!2sau!4v1609549771978!5m2!1sen!2sau" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
+              <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+                <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
+                <a href="https://1map.com/map-embed">1 Map</a>
+              </div>
             </div>
             <table class="contact__icontable">
               <tr>
@@ -450,7 +454,7 @@
             </table>
           </div>
           <div class="contact__contactform">
-            <h2>Contact <span>Form</span></h2>
+            <h3>Contact <span>Form</span></h3>
             <form class="contact__form" action="src/php/contact.php" method="post">
               <div class="contact__form--row">
                 <label for="Name" class="contact__label">Name: </label>
@@ -535,7 +539,7 @@
               <dt>Residence:</dt>
               <dd>Australia</dd>
               <dt>Address:</dt>
-              <dd>838 Collins Street, Docklands VIC 3008</dd>
+              <dd>Carnegie Melbourne Australia</dd>
               <dt>Email:</dt>
               <dd><a href="mailto:steven93.wang@gmail.com">steven93.wang@gmail.com</a></dd>
               <dt>Phone:</dt>
