New changes made on project1

--- a/index.html
+++ b/index.html
@@ -395,7 +395,6 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </section>
@@ -404,6 +403,277 @@
       <section class="section projects col-lg-12" id="projects">
         <div class="titlebanner">
           <h1>My Projects</h1>
+        </div>
+        <div class="details col-lg-12">
+          <div class="details__container col-lg-6">
+
+            <!-- WordPress -->
+            <div class="details__section">
+              <div class="container__header">
+                <h3>WordPress</h3>
+              </div>
+              <div class="details__sectioncontainer details__topitems">
+                <div class="details__bullet">
+                </div>
+                <div class="details__line">
+                </div>
+                <div class="details__card">
+                  <div class="details__title">
+                    Master of Information Technology (Professional Computing)
+                  </div>
+                  <div class="details__yearandplace">
+                    <div class="details__year">
+                      2020.8 - present
+                    </div>
+                    <div class="details__separator">
+                      |
+                    </div>
+                    <div class="details__place">
+                      Swinburne University of Technology
+                    </div>
+                  </div>
+                  <h4>Responsibilities:</h4>
+                  <ul class="details__responsibilities">
+                    <li>Designing wireframes of the official website</li>
+                    <li>Developing a shopify website LIQUID files using Ruby on Rails</li>
+                    <li>Styling the website using CSS3 and JavaScript (Vanilla, ES6)</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="resume__education--container">
+                <div class="resume__bullet">
+                </div>
+                <div class="resume__line">
+                </div>
+                <div class="resume__education--card">
+                  <div class="resume__education--course">
+                    Master of Information Technology
+                  </div>
+                  <div class="resume__yearandplace">
+                    <div class="resume__year">
+                      2016.7 - 2018.7
+                    </div>
+                    <div class="resume__separator">
+                      |
+                    </div>
+                    <div class="resume__place">
+                      Monash University
+                    </div>
+                  </div>
+                  <h4>Responsibilities:</h4>
+                  <ul class="details__responsibilities">
+                    <li>Designing wireframes of the official website</li>
+                    <li>Developing a shopify website LIQUID files using Ruby on Rails</li>
+                    <li>Styling the website using CSS3 and JavaScript (Vanilla, ES6)</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="resume__education--container">
+                <div class="resume__bullet">
+                </div>
+                <div class="resume__line">
+                </div>
+                <div class="resume__education--card">
+                  <div class="resume__education--course">
+                    Bachelor of Commerce - Professional Accounting
+                  </div>
+                  <div class="resume__yearandplace">
+                    <div class="resume__year">
+                      2014.7 - 2016.7
+                    </div>
+                    <div class="resume__separator">
+                      |
+                    </div>
+                    <div class="resume__place">
+                      Macquarie University
+                    </div>
+                  </div>
+                  <h4>Responsibilities:</h4>
+                  <ul class="details__responsibilities">
+                    <li>Designing wireframes of the official website</li>
+                    <li>Developing a shopify website LIQUID files using Ruby on Rails</li>
+                    <li>Styling the website using CSS3 and JavaScript (Vanilla, ES6)</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <!-- Shopify Ruby Experience -->
+            <div class="details__section">
+              <h3>Shopify Ruby</h3>
+              <div class="details__sectioncontainer details__topitems">
+                <div class="details__bullet">
+                </div>
+                <div class="details__line">
+                </div>
+                <div class="details__card">
+                  <div class="details__title">
+                    Web Developer
+                  </div>
+                  <div class="details__yearandplace">
+                    <div class="details__year">
+                      2020.12 - present
+                    </div>
+                    <div class="details__separator">
+                      |
+                    </div>
+                    <div class="details__place">
+                      Lotus.Eco Co., Melbourne
+                    </div>
+                  </div>
+                  <h4>Responsibilities:</h4>
+                  <ul class="details__responsibilities">
+                    <li>Designing wireframes of the official website</li>
+                    <li>Developing a shopify website LIQUID files using Ruby on Rails</li>
+                    <li>Styling the website using CSS3 and JavaScript (Vanilla, ES6)</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="resume__services col-lg-6">
+            <!-- Coding Skills -->
+            <div class="resume__coding">
+              <div class="section__header">
+                <h3>Coding <span>Skills</span></h3>
+              </div>
+              <div class="resume__skill">
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    HTML5
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--html"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    CSS3 / SASS
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--css"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    JavaScript (Vanilla, ES6, jQuery)
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--js"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    Java
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--java"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    PHP
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--php"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    C# (.NET)
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--csharp"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Design Skills -->
+            <div class="resume__design">
+              <div class="section__header">
+                <h3>Design <span>Skills</span></h3>
+              </div>
+              <div class="resume__skill">
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    Web Design (WordPress)
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--html"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    Web Design (Shopify)
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--shopify"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    System Management Design (Moodle)
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--js"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    Graphic Design (Adobe XD, Photoshop, Illustrator)
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--graphic"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Other Skills -->
+            <div class="resume__other">
+              <div class="section__header">
+                <h3>Other <span>Skills</span></h3>
+              </div>
+              <div class="resume__skill">
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    Github / Git (Version Control)
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--git"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    Troubleshooting
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--troubleshooting"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    Teamwork
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--teamwork"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+                <div class="resume__skill--container">
+                  <div class="resume__skill--text">
+                    Communication
+                  </div>
+                  <div class="resume__skill--bar">
+                    <span class="resume__progress--communication"><span class="resume__progress--inner"></span></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
