New changes made on Project 1

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Steven Wang - Web Developer</title>
-    <!-- <link rel="stylesheet" type="text/css" ref="src/libs/css/bootstrap.min.css"> -->
-    <link rel="shortcut icon" href="src/assets/img/logo.jpg" type="image/jpg">
+    <!-- <link rel="stylesheet" type="text/css" ref="libs/css/bootstrap.min.css"> -->
+    <link rel="shortcut icon" href="assets/img/logo.jpg" type="image/jpg">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="src/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
   </head>
@@ -46,8 +46,8 @@
               <li class="nav-item"><a href="#about" class="topnavbar__menuitems nav-link" id="aboutpage" data-id="2">About</a></li>
               <li class="nav-item"><a href="#resume" class="topnavbar__menuitems nav-link" id="resumepage" data-id="3">Resume</a></li>
               <li class="nav-item"><a href="#projects" class="topnavbar__menuitems nav-link" id="projectspage" data-id="4">Projects</a></li>
-              <li class="nav-item"><a href="#contact" class="topnavbar__menuitems nav-link" id="contactpage" data-id="5">Contact</a></li>
               <li class="nav-item"><a href="#blog" class="topnavbar__menuitems nav-link" id="blogpage" data-id="6">Blog</a></li>
+              <li class="nav-item"><a href="#contact" class="topnavbar__menuitems nav-link" id="contactpage" data-id="5">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -677,6 +677,27 @@
         </div>
       </section>
 
+      <!-- Blog Page -->
+      <section class="section blog col-lg-12" id="blog">
+        <div class="titlebanner">
+          <h1>My Blogs</h1>
+        </div>
+        <div class="blog__container">
+          <div class="blog__card">
+            <div class="blog__date">
+
+            </div>
+            <div class="blog__banner">
+              <p>Travel</p>
+              <h4>Bootstrap is the Most Popular Framework</h4>
+            </div>
+          </div>
+          <div class="blog__card">
+
+          </div>
+        </div>
+      </section>
+
       <!-- Contact Page -->
       <section class="section contact col-lg-12" id="contact">
         <div class="titlebanner">
@@ -691,32 +712,36 @@
                 <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
                 <a href="https://1map.com/map-embed">1 Map</a>
               </div>
+              <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+		            <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
+                <a href="https://1map.com/map-embed">1 Map</a>
+              </div>
             </div>
             <table class="contact__icontable">
               <tr>
                 <th>
-                  <img src="src/assets/icon/place.svg" alt="place" class="contact__icon">
+                  <img src="assets/icon/place.svg" alt="place" class="contact__icon">
                 </th>
                 <td></td>
                 <td>Melbourne, Australia</td>
               </tr>
               <tr>
                 <th>
-                  <img src="src/assets/icon/email.svg" alt="email" class="contact__icon">
+                  <img src="assets/icon/email.svg" alt="email" class="contact__icon">
                 </th>
                 <td></td>
                 <td>steven93.wang@gmail.com</td>
               </tr>
               <tr>
                 <th>
-                  <img src="src/assets/icon/phone.svg" alt="phone" class="contact__icon">
+                  <img src="assets/icon/phone.svg" alt="phone" class="contact__icon">
                 </th>
                 <td></td>
                 <td>+61 426119788</td>
               </tr>
               <tr>
                 <th>
-                  <img src="src/assets/icon/check.svg" alt="check" class="contact__icon">
+                  <img src="assets/icon/check.svg" alt="check" class="contact__icon">
                 </th>
                 <td></td>
                 <td>Freelance Available</td>
@@ -749,21 +774,6 @@
         </div>
       </section>
 
-      <!-- Blog Page -->
-      <section class="section blog col-lg-12" id="blog">
-        <div class="titlebanner">
-          <h1>My Blogs</h1>
-        </div>
-        <div class="blog__content">
-          <div class="blog__container">
-            <h2>Comming Soon</h2>
-          </div>
-          <div class="blog__container">
-
-          </div>
-        </div>
-      </section>
-
       <!-- Main Page -->
       <!-- this page must be placed at last for the css to work -->
       <section class="section main col-lg-12 default" id="home">
@@ -788,10 +798,10 @@
               </div>
             </div>
             <ul class="main__social">
-              <a href="https://www.linkedin.com/in/shikai-wang-b6a83ab2"><li><img src="src/assets/icon/linkedin.svg" alt="linkedin" class="main__icon"></li></a>
-              <a href="https://github.com/skykk0128"><li><img src="src/assets/icon/github.svg" alt="github" class="main__icon"></li></a>
-              <a href="https://www.facebook.com/liushisky/"><li><img src="src/assets/icon/facebook.svg" alt="facebook" class="main__icon"></li></a>
-              <a href="https://twitter.com/Shikai_Steven"><li><img src="src/assets/icon/twitter.svg" alt="twitter" class="main__icon"></li></a>
+              <a href="https://www.linkedin.com/in/shikai-wang-b6a83ab2"><li><img src="assets/icon/linkedin.svg" alt="linkedin" class="main__icon"></li></a>
+              <a href="https://github.com/skykk0128"><li><img src="assets/icon/github.svg" alt="github" class="main__icon"></li></a>
+              <a href="https://www.facebook.com/liushisky/"><li><img src="assets/icon/facebook.svg" alt="facebook" class="main__icon"></li></a>
+              <a href="https://twitter.com/Shikai_Steven"><li><img src="assets/icon/twitter.svg" alt="twitter" class="main__icon"></li></a>
             </ul>
           </div>
         </div>
@@ -822,14 +832,14 @@
     <footer class="footer">
       © 2021 All copy rights reserved. Developed by &nbsp;<span><a href="https://skykk0128.github.io/Project_1/">Steven Wang</a></span>
     </footer>
-    <!-- <script type="text/javascript" src="src/libs/js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="src/libs/js/bootstrap.min.js"></script> -->
+    <!-- <script type="text/javascript" src="libs/js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="libs/js/bootstrap.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src='https://www.google.com/recaptcha/api.js'></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script type="text/javascript" src="src/js/javascript.js">
+    <script type="text/javascript" src="js/javascript.js">
     </script>
   </body>
 </html>
